# gazebo_ros_learning

./: CMakeLists.txt  README.md  controller_plugin_description.xml  package.xml  robot_hw_sim_plugins.xml
config/: control_parameters.yaml  quadruped_display.rviz  simpledog_control.yaml  two_joint_controller.yaml
include/: gazebo_ros_control_plugin_kp.hpp  gazebo_ros_control_plugin_kp.hpp.autosave  gazebo_sim.hpp  robot_display_with_gazebo_rviz.hpp  robot_state_interface_kp.hpp  single_joint_controller.hpp  two_joints_control.hpp
launch/: display_quadruped.launch  gazebo.launch  simpledog_control.launch  single_joint_control.launch  two_joints_test.launch
lib/: gazebo_ros_control_plugin_kp.cpp  gazebo_sim.cpp  robot_display_with_gazebo_rviz.cpp  robot_hardware_interface.cpp  two_joints_control.cpp
meshes/: Origin_front_left_1_link.STL
msg/: joint_state.msg
src/: single_joint_control.cpp  single_joint_controller.cpp  single_joint_hardware_interface.cpp
urdf/: foot_sensor_gazebo.urdf.xacro  joint_gazebo.urdf.xacro  kinect.urdf.xacro  new_quadruped_model_kp.csv  new_quadruped_model_kp.urdf.xacro  simpledog_gazebo.urdf.xacro
