<package format="2">
<name>new_quadruped_model_kp</name>
<version>1.0.0</version>
<description>
<p>URDF Description package for new_quadruped_model</p>
<p>
This package contains configuration data, 3D models and launch files for new_quadruped_model robot
</p>
</description>
<author>TODO</author>
<maintainer email="TODO@email.com"/>
<license>BSD</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>gazebo_dev</build_depend>
<exec_depend>gazebo_ros</exec_depend>
<depend>roslaunch</depend>
<depend>rospy</depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>control_toolbox</depend>
<depend>controller_manager</depend>
<depend>pluginlib</depend>
<depend>hardware_interface</depend>
<depend>transmission_interface</depend>
<depend>joint_limits_interface</depend>
<depend>urdf</depend>
<depend>angles</depend>
<depend>robot_state_publisher</depend>
<depend>rviz</depend>
<depend>joint_state_publisher</depend>
<depend>gazebo</depend>
<depend>gazebo_ros_control</depend>
<depend>controller_interface</depend>
<depend>sensor_msgs</depend>
<depend>geometry_msgs</depend>
<depend>message_generation</depend>
<depend>message_runtime</depend>
<depend>trajectory_msgs</depend>
<export>
    <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
    <controller_interface plugin="${prefix}/controller_plugin_description.xml"/>
</export>
</package>
